update src - remove jquery bind sample

--- a/sample/HotTowelSpa/App/views/chart.html
+++ b/sample/HotTowelSpa/App/views/chart.html
@@ -1,7 +1,7 @@
 ﻿<section>
     <h2 class="page-title" data-bind="text: title"></h2>
     <hr />
-    <div data-bind="kendoChart: { data: dataItems , series: [{ name: 'sample', field: 'value' }] }"> </div>
+    <div data-bind="kendoChart: { data: fnDataItems, series: [{ name: 'sample', field: 'value' }] }"> </div>
     <hr/>
     <h3>Html Source Code</h3>
     <pre>
