--- a/sample/HotTowelSpa/App/views/grid-a.html
+++ b/sample/HotTowelSpa/App/views/grid-a.html
@@ -1,10 +1,50 @@
 ﻿<section>
     <h2 class="page-title" data-bind="text: title"></h2>
     <hr />
-    <div id="grid-a"></div>
+    <div data-bind="kendoGrid: {
+    data: function (widget, options) {
+        widget.setDataSource(new kendo.data.extensions.BreezeDataSource({
+            entityManager: manager,
+            endPoint: 'Products',        // endPoint can be a resource string or breeze query object
+            defaultSort: 'productName asc',
+            mapping: {
+                ignore: ['products'] // category.products is recursive - ignore it
+            }
+        })
+        );
+    },
+    columns: [
+    { field: 'productName', title: 'Name' },
+    { field: 'quantityPerUnit', title: 'Qty/Per' },
+    { field: 'reorderLevel', title: 'Re-Order Lvl' }
+    ],
+      pageable: { pageSize: 10 },
+      sortable: true,
+      filterable: false
+}"></div>
     <hr/>
     <h3>Html Source Code</h3>
     <pre>
- &lt;div id="grid-a">&lt;/div>
+&lt;div data-bind="kendoGrid: {
+    data: function (widget, options) {
+        widget.setDataSource(new kendo.data.extensions.BreezeDataSource({
+            entityManager: manager,
+            endPoint: 'Products', // endPoint can be a resource string or breeze query object
+            defaultSort: 'productName asc',
+            mapping: {
+                ignore: ['products'] // category.products is recursive - ignore it
+            }
+        })
+        );
+    },
+    columns: [
+    { field: 'productName', title: 'Name' },
+    { field: 'quantityPerUnit', title: 'Qty/Per' },
+    { field: 'reorderLevel', title: 'Re-Order Lvl' }
+    ],
+    pageable: { pageSize: 10 },
+    sortable: true,
+    filterable: false
+}" >&lt; /div >
     </pre>
 </section>
