--- a/sample/HotTowelSpa/App/views/home.html
+++ b/sample/HotTowelSpa/App/views/home.html
@@ -7,9 +7,8 @@
     <br/>
     <div class="offset1">
         <ul>
-            <li>JQuery initialization: <a href="#/grid-a">Grid A</a></li>
-            <li>html data-bind initialization: <a href="#/grid-b">Grid B</a></li>
-            <li>html/js mixed initialization: <a href="#/grid-c">Grid C</a><br/>
+            <li>html data-bind initialization: <a href="#/grid-a">Grid A</a></li>
+            <li>html/js mixed initialization: <a href="#/grid-b">Grid B</a><br/>
                 Paging, sorting, filter are all active.
             </li>
         </ul>
